[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kronvex"
version = "0.5.1"
description = "Persistent memory for AI agents — Kronvex Python SDK"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Kronvex", email = "hello@kronvex.io" }]
keywords = ["ai", "memory", "agents", "llm", "rag", "kronvex"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.24.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev              = ["pytest", "pytest-asyncio", "respx"]
langchain        = ["langchain-core>=0.1.0"]
crewai           = ["crewai>=0.1.0"]
langgraph        = ["langgraph>=0.1.0"]
openai-agents    = ["openai-agents>=0.0.1"]
autogen          = ["pyautogen>=0.2.0"]
all-integrations = ["langchain-core>=0.1.0", "crewai>=0.1.0", "langgraph>=0.1.0", "openai-agents>=0.0.1", "pyautogen>=0.2.0"]

[project.urls]
Homepage = "https://kronvex.io"
Documentation = "https://kronvex.io/docs"
Repository = "https://github.com/Daftgoldens/kronvex"
"Bug Tracker" = "https://github.com/Daftgoldens/kronvex/issues"

[project.scripts]
kronvex = "kronvex.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["kronvex"]
